# ifes-integracao-industrial

./: .gitignore  README.md
docs/: .$IHM.drawio.bkp  .$IHM.drawio.dtmp  .$diagramas.drawio.bkp  IHM.drawio  diagramas.drawio
ihm_front/: dockerfile  nginx.conf  pyproject.toml
ihm_front/ihm_javascript/: __main__.py
ihm_front/ihm_javascript/resources/: ihm.html  scripts.js  styles.css
ihm_front/ihm_streamlit/: __main__.py  app.py  graphics.py  teste.html
ihm_front/resources/: ihm.html  main.js  scripts.js  styles.css
ihm_front/resources/services/: apiService.js  chartService.js  mockService.js
ihm_scadabr/html/: prototipo_ihm.html
ihm_scadabr/js/: funcoes.js
ihm_streamlit/: dockerfile  pyproject.toml
ihm_streamlit/ihm_flask/resources/: ihm.html  styles.css
ihm_streamlit/ihm_streamlit/: app.py
ihm_streamlit/ihm_streamlit copy/resources/: scripts.js
modbus_service/: dockerfile  modbus_cliente.py  pyproject.toml
modbus_service/modbus_service/: __main__.py  servidor_modbus.py
scadabr_front/static/: exemplo_js.html  funcoes_v2.js  ihm_layout.css  pagina_1.html  pagina_2.html  prototipo_ihm_v2.html
scadabr_front/streamlit/: formulario.py  ihm_1.py  intro_streamlit.py
web_service/: dockerfile  pyproject.toml
web_service/api/: client_utils.py  crud_service.py
web_service/db/: crud_client.py  crud_service.py  produto_dao.py  run_create_db.py
web_service/modbus_service/: run_cliente.py  run_servidor.py  servidor_modbus.py
web_service/web_service/: __main__.py  database.py  modbus_client.py  models.py  router.py
