[tool.poetry]
name = "ihm-streamlit"
version = "0.1.0"
description = ""
authors = ["Matheus C. Delfino"]
packages = [{ include = "ihm_streamlit" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
lxml = "^5.3.0"
matplotlib = "^3.10.0"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true