[tool.poetry]
name = "modbus_service"
version = "0.1.0"
description = ""
authors = ["Matheus C. Delfino"]
packages = [{ include = "modbus_service" }]

[tool.poetry.dependencies]
python = "^3.11"
pymodbustcp = "^0.3.0"
sqlalchemy = "^2.0.37"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true