[tool.poetry]
name = "ifes-web-service"
version = "0.1.0"
description = ""
authors = ["Matheus C. Delfino"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.6"
uvicorn = "0.34.0"
requests = "^2.32.3"
pymodbustcp = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true