[tool.poetry]
name = "web_service"
version = "0.1.0"
description = ""
authors = ["Matheus C. Delfino"]
packages = [{ include = "web_service" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.6"
uvicorn = "0.34.0"
requests = "^2.32.3"
pymodbustcp = "^0.3.0"
sqlalchemy = "^2.0.37"
slowapi = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true